2012-07-30  Earnie Boyd  <earnie@users.sourceforge.net>

	Correct missing inclusion of <_mingw.h>.

	* include/stdint.h: Add omitted #include; all mingwrt headers are
	expected to include this; it is required to define __int64.

2011-11-30  Ozkan Sezer  <sezero@users.sourceforge.net>

	Correct prototypes for _wfindfirst()/_wfindnext() function family.

	* include/io.h (_wfindfirst, _wfindfirst32, _wfindfirsti64)
	(_wfindfirst32i64, _wfindfirst64i32): Return type changed to intptr_t.
	(_wfindnext, _wfindnext32, _wfindnexti64, _wfindnext32i64)
	(_wfindnext64i32, _wfindnext64): Type of parameter #1 must match.

2011-11-30  Earnie Boyd  <earnie@users.sourceforge.net>

	Avoid potential GCC "missing function prototype" warnings.

	* include/stdio.h (getc, putc, getchar, putchar, fopen64)
	(ftello64): Provide a function prototype declaration for each of
	these, prior to the corresponding inline implementation.

2011-08-23 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.20.

2011-08-23 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* tlsmthread.c: Update to reflect changes in tlssup.c.
	* tlssup.c: code clean-up.

2011-08-20 Chris Sutcliffe <ir0nh34d@users.sourceforge.net>

	* include/_mingw.h: Increment version to 3.19.

2011-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/float.h: Modify guard to accomodate CLang.

	Thanks to Ruben Van Boxem for the report.

2011-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* tlssup.c: Remove mingwm10.dll fallback.

2011-08-19  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/sys/types.h (ssize_t): Defined as int as opposed to long.

	Thanks to bvassche for the report.

2011-05-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct checking for short option matches in getopt_long_only().

	* mingwex/getopt.c (getopt_verify): New static inline function.
	(getopt_parse) [getopt_mode_long_only]: Use it, to validate as a